--- a/comps/css/index.css
+++ b/comps/css/index.css
@@ -11,9 +11,10 @@ body {
 /* Inputs */
 	.section-divider {
 		height: 0;
-		margin: 2.5rem -0.5rem;
+		margin-left: -0.5rem;
+		margin-right: -0.5rem;
 		overflow: hidden;
-		border-top: 1px solid #a4b3c1;
+		border-top: 1px solid #b9cee3;
 	}
 	.section-header {
 		margin-top: 90px;
@@ -108,8 +109,10 @@ body {
 		resize: none;
 	}
 	.input-format:focus, .input-format-select:focus, .input-format-textarea:focus {
-		border: 1px solid #288079;
-		box-shadow: 1px 1px 2px darkgrey;
+		/* border: 1px solid #288079;
+		box-shadow: 1px 1px 2px darkgrey; */
+		border: 1px solid #58a2d3;
+		box-shadow: 1px 1px 1px #b3d5ff;
 		outline: none;
 	}
 	.input-label-format-set {
@@ -576,10 +579,20 @@ body {
 		cursor: pointer;
 		transition: all linear .1s;
 	}
+	.form-tab:focus {
+		box-shadow: 0 0 1px 1px rgb(190, 190, 255);
+		outline: none;
+	}
 	.form-tab-active {
 		background-color: white;
 		border-bottom: 1px solid white;
+		padding: 9px 12px 4px 12px;
+		margin-top: -9px;
 		z-index: 1;
+	}
+	.form-tab-active:focus {
+		box-shadow: 0px 1px 0px 0px rgb(190, 190, 255) inset;
+		outline: none;
 	}
 	.complaint-form-page-content {
 		margin-top: 30px;
